k8s/local/pdf-generator/ingress.yaml
# File: k8s/local/pdf-generator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdf-generator-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - http:
      paths:
      # Route /api/pdf to pdf-server
      - path: /api/v1/pdf
        pathType: Prefix
        backend:
          service:
            name: pdf-server
            port:
              number: 4001
      # Route /pdf to pdf-client frontend
      - path: /pdf/client
        pathType: Prefix
        backend:
          service:
            name: pdf-client
            port:
              number: 4011
